[package]
name = "osanwecli"
version = "0.1.0"
edition = "2021"

[dependencies]
osanwelib = { path = "../osanwelib" }
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.2"
prost = "0.13.4"
prost-types = "0.13.4"
ethers = { version = "2.0", features = ["abigen"] }
log = "0.4"
env_logger = "0.10"