[package]
name = "osanwelib"
version = "0.1.0"
edition = "2021"

[lib]
name = "osanwelib"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
ethers = { version = "2.0", features = ["abigen"] }
aes = "0.7"
block-modes = "0.8"
cipher = { version = "0.3", features = ["std"] }
hex = "0.4"
sha3 = "0.10"
log = "0.4"
env_logger = "0.9"
rand = "0.8"

