[package]
name = "osanwelib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "osanwelib"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
ethers = { version = "2.0", features = ["abigen"] }
aes = "0.7"
block-modes = "0.8"
cipher = { version = "0.3", features = ["std"] }
hex = "0.4"
sha3 = "0.10"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.12", optional = true }  # Використовується, якщо плануєш gRPC
futures = "0.3"
serde = "1.0"
serde_json = "1.0"


[build-dependencies]
prost-build = "0.12"
