[package]
name = "osanwelib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "osanwelib"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
ethers = { version = "2.0", features = ["abigen"] }
aes = "0.7"
block-modes = "0.8"
cipher = { version = "0.3", features = ["std"] }
hex = "0.4"
sha3 = "0.10"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
prost = "0.13.4"
prost-types = "0.13.4"
tonic = "0.12.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }



[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.12.1"
