[package]
name = "osanwesrv"
version = "0.1.0"
edition = "2021"

[dependencies]
osanwelib = { path = "../osanwelib" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
prost = "0.13.4"
prost-types = "0.13.4"
tonic = "0.12.1"
async-trait = "0.1.73"

[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.12.1"
